Fixed layout problem in the hero

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -88,7 +88,7 @@ nav ul {
   display: flex;
   justify-content: center;
   list-style: none;
-  padding: 20px 0;
+  padding: 10px 0;
 }
 
 nav ul li {
